进一步拆开屏幕